--- a/assets/stacks/default/docker-compose.yaml
+++ b/assets/stacks/default/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.0'
 
 services:
     altitude:
-        image: docker.io/duckietown/dt-drone-interface:ente-${ARCH}
+        image: docker.io/duckietown/env-brown2022-aux:latest-${ARCH}
         restart: unless-stopped
         network_mode: host
         command: dt-launcher-altitude-node
@@ -15,7 +15,7 @@ services:
             - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
     
     state_estimation:
-        image: docker.io/duckietown/dt-drone-interface:ente-${ARCH}
+        image: docker.io/duckietown/env-brown2022-aux:latest-${ARCH}
         restart: unless-stopped
         network_mode: host
         command: dt-launcher-state-estimation-node
@@ -28,7 +28,7 @@ services:
             - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
     
     pid_controller:
-        image: docker.io/duckietown/dt-drone-interface:ente-${ARCH}
+        image: docker.io/duckietown/env-brown2022-aux:latest-${ARCH}
         restart: unless-stopped
         network_mode: host
         command: dt-launcher-pid-controller-node
@@ -41,7 +41,7 @@ services:
             - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
 
     optical_flow:
-        image: docker.io/duckietown/env-brown2022-aux:ente-${ARCH}
+        image: docker.io/duckietown/env-brown2022-aux:latest-${ARCH}
         restart: unless-stopped
         network_mode: host
         command: dt-launcher-optical-flow-node
@@ -54,7 +54,7 @@ services:
             - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
 
     localization:
-        image: docker.io/duckietown/env-brown2022-aux:ente-${ARCH}
+        image: docker.io/duckietown/env-brown2022-aux:latest-${ARCH}
         restart: unless-stopped
         network_mode: host
         command: dt-launcher-localization-node
@@ -67,7 +67,7 @@ services:
             - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
 
     slam:
-        image: docker.io/duckietown/env-brown2022-aux:ente-${ARCH}
+        image: docker.io/duckietown/env-brown2022-aux:latest-${ARCH}
         restart: unless-stopped
         network_mode: host
         command: dt-launcher-slam-node
