--- a/assets/aux/packages/sensors/package.xml
+++ b/assets/aux/packages/sensors/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>optical_flow</name>
+  <name>sensors</name>
   <version>0.0.0</version>
-  <description>The optical_flow package</description>
+  <description>The sensors package</description>
 
   <license>GPLv3</license>
   <maintainer email="nobody@duckietown.com">Nobody</maintainer>
