--- a/assets/disk_image/rootfs/data/autoboot/duckiedrone.yaml
+++ b/assets/disk_image/rootfs/data/autoboot/duckiedrone.yaml
@@ -1,13 +1,88 @@
 version: '3.3'
 services:
+
+  portainer:
+    image: ${REGISTRY:-docker.io}/duckietown/portainer:ente-${ARCH:-arm64v8}
+    container_name: portainer
+    command: ["--host=unix:///var/run/docker.sock", "--no-auth"]
+    restart: always
+    network_mode: host
+    volumes:
+      - portainer-data:/data
+      # docker socket
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  dtps:
+    image: ${REGISTRY:-docker.io}/duckietown/dtps-switchboard:release
+    container_name: dtps
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      RUST_LOG: "warn,dtps_http=debug"
+    command: --tcp-port 11511 --tcp-host 0.0.0.0 --unix-path /dtps/switchboard.sock
+    privileged: true
+    volumes:
+      - /data/ramdisk/dtps:/dtps
+      # avahi socket
+      - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
+
+  driver-tof:
+    image: ${REGISTRY:-docker.io}/duckietown/dt-duckiebot-interface:ente-${ARCH:-arm64v8}
+    container_name: driver-tof
+    restart: unless-stopped
+    network_mode: host
+    privileged: true
+    environment:
+      DT_SUPERUSER: 1
+      DT_LAUNCHER: sensor-tof
+    volumes:
+      - /data:/data
+      # dtps sockets
+      - /data/ramdisk/dtps:/dtps
+      # avahi socket
+      - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
+
+  ros1-tof:
+    image: ${REGISTRY:-docker.io}/duckietown/dt-ros-interface:ente-${ARCH:-arm64v8}
+    container_name: ros1-tof
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      DT_SUPERUSER: 1
+      DT_LAUNCHER: sensor-tof-bottom
+    volumes:
+      - /data/ramdisk/dtps:/dtps
+      # avahi socket
+      - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
+    # Await for service `driver-tof` to be ready
+    depends_on:
+      - driver-tof
+
+  rosbridge-websocket:
+    image: ${REGISTRY:-docker.io}/duckietown/dt-rosbridge-websocket:ente-${ARCH:-arm64v8}
+    container_name: ros1-rosbridge-websocket
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      DT_SUPERUSER: 1
+    volumes:
+      - /data/ramdisk/dtps:/dtps
+      # avahi socket
+      - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
+
   wifi-access-point:
     image: ${REGISTRY:-docker.io}/duckietown/dt-wifi-access-point:ente-${ARCH:-arm64v8}
     container_name: wifi-access-point
-    restart: on-failure
+    restart: unless-stopped
     network_mode: host
     privileged: true
+    environment:
+      DT_SUPERUSER: 1
     volumes:
       - /data:/data
+      # dtps sockets
+      - /data/ramdisk/dtps:/dtps
+      # host triggers
       - /triggers:/triggers
       # avahi socket
       - /var/run/avahi-daemon/socket:/var/run/avahi-daemon/socket
